create console and chart layout

--- a/src/pages/platformFuta/Ticker/Ticker.module.css
+++ b/src/pages/platformFuta/Ticker/Ticker.module.css
@@ -7,235 +7,9 @@
 }
 
 .container {
-    height: calc(100vh - 100px);
+    height: calc(100svh - 130px);
     padding: 8px 16px;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    font-family: 'Roboto Mono';
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    overflow-y: hidden;
+ 
 }
 
-.content {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    overflow-y: scroll;
-    gap: 8px;
-}
 
-.tickerContainer {
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
-}
-.tickerContainer h2 {
-    background: var(--dark4);
-    border-left: 4px solid var(--text1);
-    color: var(--text1, #f0f0f8);
-
-    font-size: 36px;
-    text-transform: uppercase;
-    padding-left: 8px;
-    height: 43px;
-}
-
-.tickerContainer h3 {
-    background: var(--dark4);
-    border-left: 4px solid var(--text1);
-    color: var(--text1, #f0f0f8);
-
-    font-size: 20px;
-    text-transform: uppercase;
-    padding-left: 8px;
-}
-.tickerRow,
-.maxRow {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: row;
-    align-items: center;
-    font-size: 18px;
-}
-.tickerLabel {
-    color: var(--text2, #8b98a5);
-    letter-spacing: -0.36px;
-    text-transform: uppercase;
-}
-.progressBar {
-    width: 27.9px;
-    height: 12px;
-    opacity: 0.5;
-    background: var(--accent1, #0ccdff);
-}
-.progressContainer {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-}
-.progressContent {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 2px;
-}
-.progressValue {
-    color: var(--accent1, #0ccdff);
-}
-.maxDropdownContainer {
-    position: relative;
-}
-.maxDropdownContent {
-    height: 138px;
-    width: 100%;
-    background-color: var(--dark4);
-    position: absolute;
-    top: 0;
-    overflow-y: scroll;
-    padding: 4px;
-    z-index: 2;
-}
-
-.maxDropdownButton {
-    cursor: pointer;
-    width: 100%;
-    outline: none;
-    border: none;
-    background: var(--dark4);
-    display: flex;
-    justify-content: space-between;
-    height: 42px;
-    display: flex;
-    align-items: center;
-    font-size: 20px;
-    text-transform: uppercase;
-    padding: 8px;
-    color: var(--text2);
-}
-.maxDropdownButton p {
-    color: var(--text1);
-}
-.maxRow {
-    height: 26px;
-    cursor: pointer;
-    color: var(--text2);
-}
-.maxRow p {
-    color: var(--text1);
-}
-.maxRow:hover {
-    background: var(--accent2);
-    transition: all var(--animation-speed) ease-in-out;
-}
-
-.userQtyDisplay {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    color: var(--text2);
-    font-size: 10px;
-}
-
-.maxButtonContainer p {
-    font-size: 18px;
-}
-
-.extraInfoContainer {
-    display: flex;
-    padding: 8px;
-    flex-direction: column;
-    align-items: center;
-    gap: 10px;
-    align-self: stretch;
-    border: 1px solid var(--dark3, #1e1e24);
-    margin-bottom: 8px;
-}
-.extraRow {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-.alignCenter {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 4px;
-    font-size: 12px;
-    color: var(--text2);
-}
-
-.bidButton {
-    display: flex;
-    padding: 2px 8px;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    align-self: stretch;
-    background: var(--accent1, #0ccdff);
-    outline: none;
-    border: 1px solid var(--accent1);
-    cursor: pointer;
-    transition: all var(--animation-speed) ease-in-out;
-    color: var(--dark1);
-    font-size: 24px;
-    text-transform: uppercase;
-}
-
-.bidButtonDisabled {
-    pointer-events: none;
-    background: var(--dark4);
-    border: none;
-}
-.bidButtonDesktop:hover {
-    background: var(--accent2);
-    border: 1px solid var(--accent2);
-    color: var(--accent1);
-}
-.create_button_disabled {
-    border: none;
-    background-color: var(--accent1);
-}
-
-.flexColumn {
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
-}
-
-.allocationContainer {
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
-}
-
-.allocationContainer h3 {
-    color: var(--text1, #ceffff);
-    font-size: 20px;
-}
-
-.allocationDisplay {
-    background: var(--dark4, #171f22);
-    font-size: 20px;
-    color: var(--accent1, #62ebf1);
-    padding: 8px;
-    display: flex;
-    align-items: center;
-}
-@media (min-width: 1280px) {
-    .container {
-        padding: 0;
-        padding-top: 12px;
-    }
-    .bidButton {
-        margin: 0 auto;
-        width: 100%;
-    }
-}
