--- a/src/pages/platformFuta/Auctions/Auctions.module.css
+++ b/src/pages/platformFuta/Auctions/Auctions.module.css
@@ -1,7 +1,14 @@
+ .mobileContainer{
+    padding: 8px 16px;
+}
+
+.desktopContainer{
+    padding: 0px 16px;
+}
+
 .auctions_main {
     display: flex;
     flex-direction: column;
-    padding: 8px 16px;
     gap: 8px;
     height: calc(100vh - 85px);
 }
@@ -13,21 +20,21 @@
 
 .desktopContainer{
     height: calc(100vh - 85px);
-    display: grid;
+
     }
     
-    .desktopContainerFull{
-        height: calc(100vh - 85px);
-        display: grid;
-        grid-template-columns: 335px 1fr;
-        
+
+.consoleChartComponent{
+    display: grid;
+    grid-template-columns: 30% 5px 1fr;
+    gap: 8px;
 }
 
-.middleContentFull{
-    height: 100%;
-    display: grid;
-    grid-template-rows: 75% 25% ;
-    gap: 8px;
+
+.auctionChartContainer{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .auctionsTickerContainer{
@@ -36,21 +43,6 @@
     gap: 1rem;
 }
 
-.middleContent{
-    height: 100%;
-}
 
 
 
-.chart{
-    width: 100%;
-    height: 100%;
-    display: grid;
-    grid-template-columns: 65% 35%;
-    gap: 8px;
-}
-
-.chartLeft, .chartRight{
-    background: var(--dark2);
-    padding: 0 8px;
-}
