--- a/src/pages/platformFuta/Account/Account.module.css
+++ b/src/pages/platformFuta/Account/Account.module.css
@@ -13,6 +13,7 @@ font-family: "Fira Mono";
 justify-content: space-between;
 }
 
+
 .content{
     width: 100%;
     height: 100%;
@@ -34,7 +35,8 @@ text-transform: uppercase;
     flex-direction: column;
     gap: 8px;
 
-    bottom: 0;
+    
+    padding-top: 3.5rem;
 }
 
 .claimAllContainer h3{
@@ -87,7 +89,7 @@ transition: all var(--animation-speed) ease-in-out;
 .desktopContainer {
     display: grid;
     grid-template-columns: auto 390px;
-    padding: 8px 16px;
+    padding: 0 16px;
     height: calc(100vh - 56px);
     gap: 16px;
 }
@@ -97,7 +99,7 @@ transition: all var(--animation-speed) ease-in-out;
     display: flex;
     flex-direction: column;
     gap: 8px;
-    padding-top: 3.5rem;
+  
     
 }
 
