--- a/src/components/Futa/TickerComponent/TickerComponent.module.css
+++ b/src/components/Futa/TickerComponent/TickerComponent.module.css
@@ -10,41 +10,46 @@
     font-weight: 400;
     line-height: normal;
     overflow-y: hidden;
-}
-
-.content {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    overflow-y: scroll;
-    gap: 8px;
+    }
+    
+    .content {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        overflow-y: scroll;
+        gap: 8px;
+        
+    
 }
 
 .tickerContainer {
     display: flex;
     flex-direction: column;
     gap: 8px;
+    
+}
+
+.tickerContainer:not(:first-of-type){
+    border-top: 1px solid var(--dark3);
+    padding-top: 8px;
 }
 .tickerContainer h2 {
-    background: var(--dark4);
-    border-left: 4px solid var(--text1);
     color: var(--text1, #f0f0f8);
 
     font-size: 36px;
     text-transform: uppercase;
-    padding-left: 8px;
+   
     height: 43px;
 }
 
 .tickerContainer h3 {
-    background: var(--dark4);
-    border-left: 4px solid var(--text1);
+    
     color: var(--text1, #f0f0f8);
 
     font-size: 20px;
     text-transform: uppercase;
-    padding-left: 8px;
+    
 }
 .tickerRow,
 .maxRow {
@@ -221,10 +226,35 @@
     display: flex;
     align-items: center;
 }
+
+.tickerNameContainer{
+    display: grid;
+    grid-template-columns: auto 120px;
+    gap: 8px;
+    align-items: center;
+}
+.tickerNameContainer button{
+    border: 1px solid var(--dark2, #111A1E);
+background: var(--dark2, #111A1E);
+padding: 4px 8px;
+color: var(--text2, #789090);
+font-size: 14px;
+height: 20px;
+display: flex;
+justify-content: space-between;
+align-items: center;
+
+}
 @media (min-width: 1280px) {
     .container {
         padding: 0;
         padding-top: 12px;
+        border-left: 1px solid var(--dark3);
+
+    }
+
+    .content{
+        padding-left: 8px;
     }
     .bidButton {
         margin: 0 auto;
