--- a/src/components/Futa/SearchableTicker/SearchableTicker.module.css
+++ b/src/components/Futa/SearchableTicker/SearchableTicker.module.css
@@ -59,6 +59,7 @@ color: var(--text2)
 .timeDropdownRight{
     display: flex;
     justify-content: flex-end;
+    
 }
 .timeDropdownRight button{
     height: 24px;
@@ -74,7 +75,12 @@ gap: 10px;
 font-size: 12px;
 cursor: pointer;
 outline: none;
+transition: all var(--animation-speed) ease-in-out;
 
+}
+
+.buttonOn:hover, .buttonOff:hover{
+    border: 1px solid var(--dark3);
 }
  .buttonOn{
     color: var(--accent1) !important
