--- a/src/pages/platformFuta/Auctions/Auctions.module.css
+++ b/src/pages/platformFuta/Auctions/Auctions.module.css
@@ -29,7 +29,10 @@
     grid-template-columns: 30% 5px 1fr;
     gap: 8px;
 }
-
+.consoleChartComponent span{
+    border-left: 1px dashed var(--dark3);
+    border-right: 1px dashed var(--dark3);
+}
 
 .auctionChartContainer{
     display: flex;
