--- a/src/components/Futa/SearchableTicker/SearchableTicker.module.css
+++ b/src/components/Futa/SearchableTicker/SearchableTicker.module.css
@@ -61,7 +61,7 @@ color: var(--text2)
     justify-content: flex-end;
     
 }
-.timeDropdownRight button{
+.timeDropdownRight button {
     height: 24px;
     border: 1px solid var(--dark3, #1E1E24);
     background: var(--dark4, #171F22);
@@ -69,20 +69,20 @@ color: var(--text2)
     display: flex;
     justify-content: center;
     align-items: center;
-padding: 4px 8px;
-text-align: center;
-gap: 10px;
-font-size: 12px;
-cursor: pointer;
-outline: none;
-transition: all var(--animation-speed) ease-in-out;
-
+    padding: 4px 8px;
+    text-align: center;
+    gap: 10px;
+    font-size: 12px;
+    cursor: pointer;
+    outline: none;
+    transition: all var(--animation-speed) ease-in-out;
 }
 
 .buttonOn:hover, .buttonOff:hover{
     border: 1px solid var(--dark3);
 }
- .buttonOn{
+
+.buttonOn{
     color: var(--accent1) !important
 }
 .timeDropdownLeft{
@@ -215,6 +215,10 @@ color: var(--text1)
   
 }
 
+
+.buttonOn, .buttonOff {
+    outline: 1px solid green;
+}
 
 @media (min-width: 1280px) {
 .content{
