--- a/src/components/Futa/SearchableTicker/SearchableTicker.module.css
+++ b/src/components/Futa/SearchableTicker/SearchableTicker.module.css
@@ -3,42 +3,44 @@
     display: flex;
     flex-direction: column;
     gap: 8px;
-
 }
 
-.header{
-   display: flex;
-   flex-direction: column;
-   gap: 8px;
-}
-
-.headerBottom{
-    display: grid;
-    grid-template-columns: 1fr 30%;
+.header {
+    display: flex;
+    flex-direction: column;
     gap: 8px;
-    /* display: flex;
-    flex-direction: row;
-    flex-wrap: wrap; */
 }
 
-.title{
+.filter_options {
+    /* display: grid;
+    grid-template-columns: 1fr 30%;
+    gap: 8px; */
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    gap: 10px;
+    width: 100%;
+}
+
+.title {
     font-size: 24px;
     text-transform: uppercase;
 }
 
-.searchContainer {
+.text_search_box {
     display: flex;
+    flex-direction: row;
+    align-items: center;
     width: 100%;
-    max-width: 725px;
-    background-color: var(--dark4);
+    max-width: 700px;
     height: 24px;
     padding: 0px 4px 0px 8px;
-    align-items: center;
     gap: 4px;
-    align-self: stretch;
+    background-color: var(--dark4);
 }
 
-.searchInput {
+.text_search_box > input {
     width: 100%;
     padding: 0 8px;
     background: transparent;
@@ -55,17 +57,18 @@
 color: var(--text2)
 }
 
-.timeDropdownContainer{
-    width: 100%;
+.sort_toggles {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 8px;
 }
+
 .timeDropdownRight{
     display: flex;
     justify-content: flex-end;
-    
+    min-width: 120px;
 }
+
 .timeDropdownRight button {
     height: 24px;
     border: 1px solid var(--dark3, #1E1E24);
@@ -92,6 +95,7 @@ color: var(--text2)
 }
 .timeDropdownLeft{
     width: 100%;
+    min-width: 160px;
     position: relative
 
 }
@@ -228,7 +232,6 @@ color: var(--text1)
 @media (min-width: 1280px) {
 .content{
     display: grid;
-   
     align-items: center;
 }
 
@@ -238,4 +241,14 @@ font-size: 36px;
 text-transform: uppercase;
 }
 
+}
+
+@media (max-width: 600px) {
+    .filter_options {
+        flex-wrap: wrap;
+    }
+
+    .sort_toggles {
+        width: 100%;
+    }
 }
