--- a/src/components/Form/TokenInputQuantity.module.css
+++ b/src/components/Form/TokenInputQuantity.module.css
@@ -49,7 +49,9 @@
     outline: 0;
     background-color: transparent;
     background-clip: padding-box;
-    transition: border-color var(--animation-speed) ease-in-out, box-shadow var(--animation-speed) ease-in-out;
+    transition:
+        border-color var(--animation-speed) ease-in-out,
+        box-shadow var(--animation-speed) ease-in-out;
     font-family: var(--mono);
 }
 
@@ -103,54 +105,46 @@
 .pulseAnimation {
     animation: shadow-pulse 1s 6;
 }
-.futaLayout{
-   
+.futaLayout {
     display: grid;
     grid-template-columns: 70% 30%;
     min-height: 40px;
     gap: 8px;
-   
+
     width: 100%;
-    font-family: "Fira Mono";
-    
-
-   
-   
+    font-family: 'Fira Mono';
 }
 
-.futaLayoutLeft{
-    background: var(--dark2, #111A1E);
+.futaLayoutLeft {
+    background: var(--dark2, #111a1e);
     display: flex;
-padding: 8px;
-flex-direction: column;
-justify-content: space-between;
-align-items: flex-start;
-flex: 1 0 0;
-align-self: stretch;
-
+    padding: 8px;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex: 1 0 0;
+    align-self: stretch;
 }
 
-.futaLayoutLeft p{
+.futaLayoutLeft p {
     font-size: 10px;
-    color: var(--text2)
+    color: var(--text2);
 }
-.futaLayoutRight{
+.futaLayoutRight {
     display: grid;
     grid-template-rows: 1fr 1fr;
     gap: 8px;
 }
 
-.futaLayoutRight button{
-    background: var(--dark2, #111A1E);
+.futaLayoutRight button {
+    background: var(--dark2, #111a1e);
     padding: 8px;
     outline: none;
     border: none;
-    padding: 8px ;
+    padding: 8px;
 }
 
-
-.walletBalanceButton{
-    
+.walletBalanceButton {
     display: flex;
     justify-content: center;
     align-items: center;
