add auto fill to search box

--- a/src/components/Futa/SearchableTicker/SearchableTicker.module.css
+++ b/src/components/Futa/SearchableTicker/SearchableTicker.module.css
@@ -9,18 +9,18 @@
     display: flex;
     flex-direction: column;
     gap: 8px;
+    width: 100%;
 }
 
 .filter_options {
-    /* display: grid;
-    grid-template-columns: 1fr 30%;
-    gap: 8px; */
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: space-between;
-    gap: 10px;
+    display: grid;
+    grid-template-columns: 1fr 400px;
+    gap: 8px;
+    padding: 0 8px;
+
+   
     width: 100%;
+    align-items: center;
 }
 
 .title {
@@ -33,11 +33,12 @@
     flex-direction: row;
     align-items: center;
     width: 100%;
-    max-width: 50%;
+    /* max-width: 50%; */
     height: 24px;
     padding: 0px 4px 0px 8px;
     gap: 4px;
     background-color: var(--dark4);
+  
 }
 
 .text_search_box > input {
@@ -60,6 +61,10 @@ color: var(--text2)
 .sort_toggles {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    gap: 8px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
     gap: 8px;
 }
 
@@ -99,9 +104,10 @@ color: var(--text2)
     border: 1px solid var(--accent1) !important
 }
 .timeDropdownLeft{
-    width: 100%;
-    min-width: 160px;
-    position: relative
+    width: 180px;
+    position: relative;
+   
+  
 
 }
 
@@ -109,6 +115,8 @@ color: var(--text2)
     width: 100%;
    display: grid;
    grid-template-columns:  auto 25px;
+   align-items: center;
+  
 }
 .timeDropdownButton{
 border-left: 4px solid var(--accent1, #62EBF1);
@@ -119,6 +127,8 @@ justify-content: space-between;
 align-items: center;
 cursor: pointer;
 height: 24px;
+width: 100%;
+
 }
 .timeDropdownButton p{
 font-size: 12px;
@@ -130,8 +140,9 @@ color: var(--text1)
     align-items: center;
 }
 .dropdown{
+    
     height: auto;
-    width: calc(100% - 25px);
+    width: 155px;
     background-color: var(--dark4);
     position: absolute;
     top: 30px;
@@ -254,11 +265,11 @@ font-size: 36px;
 text-transform: uppercase;
 }
 
-.text_search_box {
+/* .text_search_box {
 
     max-width: 60%;
    
-}
+} */
 
 
 }
