--- a/src/components/Futa/SearchableTicker/SearchableTicker.module.css
+++ b/src/components/Futa/SearchableTicker/SearchableTicker.module.css
@@ -1,4 +1,5 @@
-.container, .content{
+.container,
+.content {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -37,7 +38,6 @@
     padding: 0px 4px 0px 8px;
     gap: 4px;
     background-color: var(--dark4);
-  
 }
 
 .text_search_box > input {
@@ -54,7 +54,7 @@
 }
 
 .searchInput::placeholder {
-color: var(--text2)
+    color: var(--text2);
 }
 
 .sort_toggles {
@@ -67,20 +67,19 @@ color: var(--text2)
     gap: 8px;
 }
 
-.timeDropdownRight{
+.timeDropdownRight {
     display: flex;
     justify-content: flex-end;
     flex-direction: row;
     align-items: center;
     gap: 8px;
-    
 }
 
 .timeDropdownRight button {
     width: 110px;
     height: 24px;
-    border: 1px solid var(--dark3, #1E1E24);
-    background: var(--dark4, #171F22);
+    border: 1px solid var(--dark3, #1e1e24);
+    background: var(--dark4, #171f22);
     color: var(--text2);
     display: flex;
     justify-content: center;
@@ -94,53 +93,48 @@ color: var(--text2)
     transition: all var(--animation-speed) ease-in-out;
 }
 
-.buttonOn:hover, .buttonOff:hover{
+.buttonOn:hover,
+.buttonOff:hover {
     border: 1px solid var(--text1);
-    color: var(--text1)
+    color: var(--text1);
 }
 
-.buttonOn{
+.buttonOn {
     color: var(--accent1) !important;
-    border: 1px solid var(--accent1) !important
+    border: 1px solid var(--accent1) !important;
 }
-.timeDropdownLeft{
+.timeDropdownLeft {
     width: 180px;
     position: relative;
-   
-  
-
 }
 
-.timeDropdownContent{
+.timeDropdownContent {
     width: 100%;
-   display: grid;
-   grid-template-columns:  auto 25px;
-   align-items: center;
-  
+    display: grid;
+    grid-template-columns: auto 25px;
+    align-items: center;
 }
-.timeDropdownButton{
-border-left: 4px solid var(--accent1, #62EBF1);
-background: var(--dark4, #171F22);
-display: flex;
-padding: 4px 4px 4px 8px;
-justify-content: space-between;
-align-items: center;
-cursor: pointer;
-height: 24px;
-width: 100%;
-
+.timeDropdownButton {
+    border-left: 4px solid var(--accent1, #62ebf1);
+    background: var(--dark4, #171f22);
+    display: flex;
+    padding: 4px 4px 4px 8px;
+    justify-content: space-between;
+    align-items: center;
+    cursor: pointer;
+    height: 24px;
+    width: 100%;
 }
-.timeDropdownButton p{
-font-size: 12px;
-color: var(--text1)
+.timeDropdownButton p {
+    font-size: 12px;
+    color: var(--text1);
 }
-.sortOptions{
+.sortOptions {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-.dropdown{
-    
+.dropdown {
     height: auto;
     width: 155px;
     background-color: var(--dark4);
@@ -153,22 +147,22 @@ color: var(--text1)
     flex-direction: column;
     gap: 4px;
 }
-.timeItem{
+.timeItem {
     font-size: 12px;
-    color: var(--text1)
+    color: var(--text1);
 }
 
-.timeItem:hover{
+.timeItem:hover {
     background: var(--dark2);
     cursor: pointer;
 }
 
 /* ticker item */
-.tickerItemContainer{
+.tickerItemContainer {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 30px;
     border-left: 4px solid var(--accent2);
-    border-right:  4px solid var(--accent2);
+    border-right: 4px solid var(--accent2);
     align-items: center;
     font-size: 18px;
     color: var(--text1);
@@ -176,102 +170,95 @@ color: var(--text1)
     overflow-y: scroll;
     transition: all var(--animation-speed) ease-in-out;
     cursor: pointer;
-
 }
 
-.tickerItemContainer:hover{
+.tickerItemContainer:hover {
     background: var(--dark4);
 }
-.tickerItemContainer p:first-of-type{
+.tickerItemContainer p:first-of-type {
     text-transform: uppercase;
 }
-.tickerItemContainer p{
-    padding: 0 8px
+.tickerItemContainer p {
+    padding: 0 8px;
 }
 
-.tickerItemContainer p:nth-of-type(3), .tickerHeader p:nth-of-type(3){
+.tickerItemContainer p:nth-of-type(3),
+.tickerHeader p:nth-of-type(3) {
     text-align: end;
 }
 
-.statusContainer{
+.statusContainer {
     width: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.tickerStatus{
+.tickerStatus {
     width: 10px;
     height: 10px;
     border-radius: 50%;
- 
 }
-.tickerTableContainer{
+.tickerTableContainer {
     width: 100%;
     display: flex;
     flex-direction: column;
     gap: 8px;
 }
 
-.tickerHeader{
+.tickerHeader {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 30px;
     color: var(--text3);
     font-size: 12px;
     border-left: 4px solid transparent;
-    border-right:  4px solid transparent;
+    border-right: 4px solid transparent;
     padding-left: 12px;
-
-   
-
 }
 
-
-.tickerHeader span{
+.tickerHeader span {
     width: 10px;
     height: 10px;
     border-radius: 50%;
-    background: var(--text3)
+    background: var(--text3);
 }
-.tickerTableContent{
+.tickerTableContent {
     width: 100%;
     display: flex;
     flex-direction: column;
     gap: 4px;
-  
 }
 
-.marketCap{
+.marketCap {
     text-align: end;
 }
 
-.marketCapHeader{
+.marketCapHeader {
     text-align: end;
     padding: 0 12px;
 }
 
-.buttonOn, .buttonOff {
+.buttonOn,
+.buttonOff {
     outline: 1px solid green;
 }
 
 @media (min-width: 1280px) {
-.content{
-    display: grid;
-    align-items: center;
-}
+    .content {
+        display: grid;
+        align-items: center;
+    }
 
-.content h2{
-    color: var(--text1, #CEFFFF);
-font-size: 36px;
-text-transform: uppercase;
-}
+    .content h2 {
+        color: var(--text1, #ceffff);
+        font-size: 36px;
+        text-transform: uppercase;
+    }
 
-/* .text_search_box {
+    /* .text_search_box {
 
     max-width: 60%;
    
 } */
-
-
 }
 
 @media (max-width: 600px) {
