fix scroll in ticker component, add connect wallet to account, and add selected state to ticker on auctions

--- a/src/components/Futa/SearchableTicker/SearchableTicker.module.css
+++ b/src/components/Futa/SearchableTicker/SearchableTicker.module.css
@@ -179,6 +179,11 @@ color: var(--text1)
 
 }
 
+.active{
+    background: #28585D;
+}
+
+
 .tickerItemContainer:hover{
     background: var(--dark4);
 }
