--- a/src/pages/platformFuta/Create/Create.module.css
+++ b/src/pages/platformFuta/Create/Create.module.css
@@ -120,9 +120,11 @@
 }
 
 .create_button_disabled {
-    background-color: var(--text2);
+    background-color: var(--dark4);
     text-transform: uppercase;
     font-size: 24px;
+    border: 1px solid transparent;
+    color: var(--text2)
 }
 
 
