--- a/src/components/Chat/MessagePanel/SentMessagePanel/SentMessagePanel.module.css
+++ b/src/components/Chat/MessagePanel/SentMessagePanel/SentMessagePanel.module.css
@@ -638,6 +638,8 @@
     left: 0;
     transition: all .2s ease-in-out;
     transform: translateX(-75%);
+    z-index: 10;
+    cursor: pointer;
 }
 
 .chain_logo.testnet{
