--- a/src/components/Futa/SearchableTicker/SearchableTicker.module.css
+++ b/src/components/Futa/SearchableTicker/SearchableTicker.module.css
@@ -1,6 +1,7 @@
 .container,
 .content {
     width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     gap: 8px;
@@ -254,8 +255,13 @@
     .tickerTableContent {
      
        
-        height: calc(100vh - 200px);
+        /* height: calc(100vh - 200px);
+        overflow-y: scroll; */
+        height: 100%;
         overflow-y: scroll;
+    
+
+       
     }
 
 }
@@ -276,7 +282,13 @@
 @media (max-width: 780px) {
     .container {
         margin-bottom: 70px;
+        
     }
+.tickerTableContent{
+    
+    height: 70svh;
+    overflow-y: scroll;
+}
 }
 
 @media (max-width: 600px) {
@@ -288,4 +300,5 @@
         width: 100%;
         justify-content: flex-start;
     }
+
 }
