--- a/src/components/Futa/TickerComponent/TickerComponent.module.css
+++ b/src/components/Futa/TickerComponent/TickerComponent.module.css
@@ -10,8 +10,8 @@
     font-weight: 400;
     line-height: normal;
     
-
-  
+    
+    
     }
     
     .content {
@@ -20,6 +20,7 @@
         flex-direction: column;
         justify-content: space-between;
         overflow-y: scroll;
+        overflow-x: hidden;
         gap: 8px;
         
     
