add scroll to account content

--- a/src/components/Futa/SearchableTicker/SearchableTicker.module.css
+++ b/src/components/Futa/SearchableTicker/SearchableTicker.module.css
@@ -285,7 +285,7 @@
 @media (max-width: 1280px) {
     .tickerTableContent{
     
-        height: 60svh;
+        max-height: 60svh;
         overflow-y: scroll;
     }
 }
