--- a/src/pages/platformFuta/Account/Account.module.css
+++ b/src/pages/platformFuta/Account/Account.module.css
@@ -1,6 +1,8 @@
 .container{
     width: 100%;
     height: calc(100svh - 154px);
+   
+   
 
     display: flex;
 padding: 8px 16px;
@@ -121,7 +123,7 @@ transition: all var(--animation-speed) ease-in-out;
 
 
 
-.connectWalletContent button{
+.connectWalletContent button, .connectWalletContent a{
    
     height: 28px;
     outline: none;
@@ -140,9 +142,24 @@ transition: all var(--animation-speed) ease-in-out;
     text-transform: uppercase;
    
     margin: 0 auto;
+    
 }
 
-.connectWalletContent button:hover{
+.connectWalletContent a{
+    color: var(--dark1)
+}
+
+.connectWalletContent button:hover, .connectWalletContent a:hover{
     background: transparent;
     color: var(--accent1)
+}
+
+@media (max-width: 780px) {
+
+.claimAllContainer h3{
+    text-align: center;
+}
+.claimButton{
+    margin: 5px 0;
+}
 }
