--- a/src/pages/platformFuta/Auctions/Auctions.module.css
+++ b/src/pages/platformFuta/Auctions/Auctions.module.css
@@ -44,3 +44,29 @@
 
 
 
+
+
+.separatorContainer{
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+   padding-top: 8px;
+}
+.dotsContainer {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.dot {
+    width: 1px;
+    height: 1px;
+    background-color: black;
+   
+    background-color:  rgb(66, 71, 74);
+    
+}
