--- a/src/index.css
+++ b/src/index.css
@@ -4,13 +4,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100;300;400;500&display=swap');
 
 @import url('https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&display=swap');
-
 /* For simple theme change(special occasion), change portfolio and swap background. No need for a different color scheme*/
 :root {
     --font-logo: 'Lexend Exa', sans-serif;
     --font-family: 'Lexend Deca', sans-serif;
     --roboto: 'Roboto Mono', monospace;
     --mono: monospace, 'Lexend Deca' sans-serif;
+
+    --swap-bg: url('./assets/images/backgrounds/swap_bg.png');
+
 
     /* font */
     --title-ts: 0px 0px 150px rgba(70, 183, 219, 0.5),
@@ -157,6 +159,7 @@
     --font-family: 'Lexend Deca', sans-serif;
     --roboto: 'Roboto Mono', monospace;
     --mono: monospace, 'Lexend Deca' sans-serif;
+    --swap-bg: url('./assets/images/backgrounds/swap_bg.png');
 
     /* font */
     --title-ts: 0px 0px 150px rgba(242, 153, 74, 0.5),
@@ -320,6 +323,8 @@
 
 [data-theme='purple_light'] {
     --portfolio-banner: linear-gradient(to right, #f0f2f0, #000c40);
+    --swap-bg: url('./assets/images/backgrounds/swap_bg.png');
+    
 
     /* colors */
     --blur-bg: #ebebed;
@@ -343,6 +348,47 @@
 
     --swap-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16),
         0 3px 6px rgba(0, 0, 0, 0.23);
+    --swap-border: none;
+    --navbar-border: #cacbcd;
+    --dark-border: 0.2px solid #fefefe;
+    --border: #cacbcd;
+    --select: #acb6c4;
+}
+
+[data-theme='sepolia_light'] {
+    --portfolio-banner: linear-gradient(to right, #f0f2f0, #000c40);
+    --swap-bg: url('./assets/images/backgrounds/swap_bg_sepolia.webp');
+
+
+    /* colors */
+    --blur-bg: #ebebed;
+
+    --text1: black;
+    --text2: #19222d;
+    --text3: #0e131a;
+
+    --dark1: #e6eaf2;
+    --dark2: #f6f6f7;
+    --dark3: #eff1f4;
+
+    --accent1: #ebbe49;
+    --accent2: #f44336;
+
+    --gradient-box-shadow: 0px 0px 5px 0px rgba(239, 237, 232, 0.5), 
+    0px 0px 10px 2px rgba(243, 241, 237, 0.4), 
+    0px 0px 15px 4px rgba(245, 244, 242, 0.3);
+
+
+    --shimmer: linear-gradient(to right, #ece9e6, white);
+    --chart-gradient: linear-gradient(to right, #d8d4d1, white);
+    --dark-gradient: linear-gradient(
+        90deg,
+        #9494d1 0%,
+        #645e7e 49.48%,
+        #7d7db1 100%
+    );
+
+    --swap-box-shadow: none;
     --swap-border: none;
     --navbar-border: #cacbcd;
     --dark-border: 0.2px solid #fefefe;
