--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,6 @@
 
     --swap-bg: url('./assets/images/backgrounds/swap_bg.png');
 
-
     /* font */
     --title-ts: 0px 0px 150px rgba(70, 183, 219, 0.5),
         0px 0px 100px rgba(70, 183, 219, 0.5),
@@ -324,7 +323,6 @@
 [data-theme='purple_light'] {
     --portfolio-banner: linear-gradient(to right, #f0f2f0, #000c40);
     --swap-bg: url('./assets/images/backgrounds/swap_bg.png');
-    
 
     /* colors */
     --blur-bg: #ebebed;
@@ -355,10 +353,9 @@
     --select: #acb6c4;
 }
 
-[data-theme='sepolia_light'] {
+[data-theme='plume_light'] {
     --portfolio-banner: linear-gradient(to right, #f0f2f0, #000c40);
     --swap-bg: url('./assets/images/backgrounds/swap_bg_sepolia.webp');
-
 
     /* colors */
     --blur-bg: #ebebed;
@@ -374,10 +371,9 @@
     --accent1: #ebbe49;
     --accent2: #f44336;
 
-    --gradient-box-shadow: 0px 0px 5px 0px rgba(239, 237, 232, 0.5), 
-    0px 0px 10px 2px rgba(243, 241, 237, 0.4), 
-    0px 0px 15px 4px rgba(245, 244, 242, 0.3);
-
+    --gradient-box-shadow: 0px 0px 5px 0px rgba(239, 237, 232, 0.5),
+        0px 0px 10px 2px rgba(243, 241, 237, 0.4),
+        0px 0px 15px 4px rgba(245, 244, 242, 0.3);
 
     --shimmer: linear-gradient(to right, #ece9e6, white);
     --chart-gradient: linear-gradient(to right, #d8d4d1, white);
