--- a/src/components/Futa/SearchableTicker/SearchableTicker.module.css
+++ b/src/components/Futa/SearchableTicker/SearchableTicker.module.css
@@ -103,14 +103,13 @@
 }
 
 .filters {
-    width: 350px;
     position: relative;
 }
 
 .timeDropdownContent {
     width: 100%;
     display: grid;
-    grid-template-columns: auto 25px;
+    grid-template-columns: 180px 25px;
     align-items: center;
 }
 .timeDropdownButton {
@@ -142,7 +141,7 @@
 }
 .dropdown {
     height: auto;
-    width: 190px;
+    width: calc(100% - 25px);
     background-color: var(--dark4);
     position: absolute;
     top: 30px;
@@ -152,15 +151,17 @@
     display: flex;
     flex-direction: column;
     gap: 4px;
-    border: 0.5px solid var(--accent1);
+   
 }
 .timeItem {
     font-size: 12px;
     color: var(--text1);
+    transition: all var(--animation-speed) ease-in-out;
+    cursor: pointer;
 }
 
 .timeItem:hover {
-    background: var(--dark2);
+    background: var(--accent3);
 }
 
 .tickerItemContainer {
