--- a/src/components/Futa/ConsoleComponent/ConsoleComponent.module.css
+++ b/src/components/Futa/ConsoleComponent/ConsoleComponent.module.css
@@ -16,6 +16,9 @@
     display: flex;
     flex-direction: column;
     gap: 8px;
+    height: 180px;
+
+    overflow-y: scroll;
 }
 .container h3{
     color: var(--text1, #CEFFFF);
