--- a/src/pages/platformFuta/Account/Account.module.css
+++ b/src/pages/platformFuta/Account/Account.module.css
@@ -77,15 +77,16 @@ justify-content: center;
 align-items: center;
 gap: 10px;
 align-self: stretch;
-background: var(--accent1, #0CCDFF);
 outline: none;
-border: 1px solid var(--accent1);
+background: var(--accent1, #0ccdff);
+color: var(--dark1);
+border: none;
 cursor: pointer;
 transition: all var(--animation-speed) ease-in-out;
 }
 .claimButton:hover{
-    background: transparent;
-    color: var(--accent1)
+    background: var(--accent2);
+    color: var(--dark1);
 }
 
 /* desktop */
@@ -125,21 +126,20 @@ transition: all var(--animation-speed) ease-in-out;
 
 .connectWalletContent button, .connectWalletContent a{
    
-    height: 28px;
-    outline: none;
-    padding: 2px 8px;
-    font-size: var(--header-size);
-    line-height: var(--header1-lh);
+    
     display: flex;
+    padding: 2px 8px;
     justify-content: center;
     align-items: center;
-    align-self: stretch;
-    background: var(--accent1, #0CCDFF);
-    outline: none;
-    border: 1px solid var(--accent1);
-    cursor: pointer;
-    transition: all var(--animation-speed) ease-in-out;
+    font-size: var(--header-size);
+    line-height: var(--header1-lh);
     text-transform: uppercase;
+    background: var(--accent1, #0ccdff);
+    color: var(--dark1);
+    border: none;
+    transition: all var(--animation-speed) ease-in-out;
+    cursor: pointer;
+    outline: none;
    
     margin: 0 auto;
     
@@ -150,8 +150,8 @@ transition: all var(--animation-speed) ease-in-out;
 }
 
 .connectWalletContent button:hover, .connectWalletContent a:hover{
-    background: transparent;
-    color: var(--accent1)
+    background: var(--accent2);
+    color: var(--dark1);
 }
 
 @media (max-width: 780px) {
