--- a/src/pages/platformFuta/Create/Create.module.css
+++ b/src/pages/platformFuta/Create/Create.module.css
@@ -114,8 +114,9 @@
 
 .create_button,
 .create_button_disabled {
-    border: 1px solid var(--accent1);
-    background-color: var(--accent1);
+    background: var(--accent1, #0ccdff);
+    color: var(--dark1);
+    border: none;
     transition: all var(--animation-speed) ease-in-out
 }
 
@@ -129,8 +130,8 @@
 
 
 .create_button:hover{
-    background-color: transparent;
-    color: var(--accent1)
+    background: var(--accent2);
+    color: var(--dark1);
 }
 .footerContainer {
     width: 100%;
